# status_v3

./: .gitignore  Cargo.toml  batch_check.toml  build.bash  config_update_from_local.bash  deploy.bash  remote_build.bash  send_config.bash
pipe_configs/: acquisition.toml  bart_recon.toml  bart_recon_fetch.toml  co_reg.toml  co_reg_status.toml  connectome_gen_fib.toml  connectome_nlsam_project.toml  diffusion_calc.toml  diffusion_calc_connectome.toml  diffusion_calc_connetome.toml  diffusion_calc_nlsam.toml  diffusion_calc_nlsam_status.toml  diffusion_calc_status.toml  diffusion_gen_fib.toml  diffusion_nlsam_gen_fib.toml  mat_CS2_recon.toml  mat_CS2_recon_civm_raw.toml  mat_CS2_recon_extract_fid.toml  mat_CS_recon.toml  mat_CS_recon_civm_raw.toml  mat_CS_recon_cleanup_ignore.toml  mat_CS_recon_extract_fid.toml  nlsam_chunky.toml
prototype/: prototype_bulk_check.bash  prototype_bulk_check_5xfad.bash  prototype_bulk_check_co_reg.bash  prototype_bulk_check_detailed.bash  prototype_bulk_check_kempermann.bash  prototype_bulk_check_nii4d.bash  prototype_bulk_check_nlsam.bash  prototype_bulk_check_nlsam_mask.bash  prototype_check_co_reg.bash  prototype_check_nii4d.bash  prototype_check_nlsam_mask.bash  prototype_status_check.bash
src/: args.rs  host.rs  host_connection.rs  lib.rs  pipe.rs  request.rs  server.rs  stage.rs  status.rs
tests/: file_search.rs  ssh.rs  test_multiple_connectome.bash  tree.rs
