[package]
name = "status_v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5"
serde_json = "1.0.87"
glob = "0.3.0"
clap = { version = "3.2.23", features = ["derive"] }
serde_regex = "1.1.0"
civm_rust_utils = { git = "git+ssh://git@github.com:/wyatt-A/civm_rust_utils.git", branch = "main" }
ssh-rs = "0.3.2"
pathsearch = "0.2.0"
hostname = "0.3.1"
rand = "0.8.5"
ssh_config = "0.1.0"
dirs = "4.0.0"
log = "0.4.17"
env_logger = "0.10.0"
whoami = "1.4.0"
walkdir = "2.3.2"
